--- a/COMP2068 - TypeScript Example/index.html
+++ b/COMP2068 - TypeScript Example/index.html
@@ -8,11 +8,12 @@
     <link href="css/normalize.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
 </head>
-<body>
-    <canvas width="320" height="480"></canvas>
+<body onload="init()">
+    <canvas id="canvas" width="320" height="480"></canvas>
 
     <!-- JavaScript Section -->
     <script src="Scripts/jquery-2.1.1.min.js"></script>
+    <script src="Scripts/createjs-2013.12.12.min.js"></script>
     <script src="Scripts/app.js"></script>
 </body>
 </html>
